--- a/SE-2019-2/Sistemas_Distribuidos/Tarefas/Outubro-2/comunicweb/templates/index.html
+++ b/SE-2019-2/Sistemas_Distribuidos/Tarefas/Outubro-2/comunicweb/templates/index.html
@@ -40,7 +40,7 @@
         ajaxRequest.onreadystatechange = function(){
             if(ajaxRequest.readyState === 4){
                 var ajaxDisplay = document.getElementById('res');
-                ajaxDisplay.placeholder = JSON.parse( ajaxRequest.responseText ).resultado;
+                ajaxDisplay.value = JSON.parse( ajaxRequest.responseText ).resultado;
                 
             }
         }
@@ -55,10 +55,9 @@
         }
         
         function sendFormWithKeyEnter(event) {
-            var key = event.which || event.keyCode;
-            if(key === 13){
-                ajaxFunction(); 
-            }
+            //var key = event.which || event.keyCode;
+            var ajaxDisplay = document.getElementById('res').value = null;
+            ajaxFunction();  
         }
     
     </script>
@@ -78,20 +77,32 @@
                     <h1>Somar Dois Valores</h1>
                 </span>
             </div>
-            <form class="jumbotron jumbotron-fluid " >
+            <form autocomplete="off" class="jumbotron jumbotron-fluid " >
                     <div class="row form-row col-md-8 mb-3"></div>
                         <div class="col input-group mb-3">
                             <div class="input-group-prepend">
                                 <label for="x" class="input-group-text"> Pirmeiro valor: </label>
                             </div>
-                            <input id="x" type="text" class="form-control" >
+                            <input 
+                                id="x"
+                                onchange="sendFormWithKeyEnter(event)"
+                                onkeypress="sendFormWithKeyEnter(event)"
+                                onkeydown="sendFormWithKeyEnter(event)"
+                                type="text" 
+                                class="form-control" >
                         </div>
                         <div class="col input-group mb-3">
                             <div class="input-group-prepend">
                                 <label for="y" class="input-group-text"> Segundo valor: </label>
                             </div>
 
-                            <input id="y" onkeypress="sendFormWithKeyEnter(event)" type="text" class="form-control" >
+                            <input 
+                                id="y"
+                                onchange="sendFormWithKeyEnter(event)"
+                                onkeypress="sendFormWithKeyEnter(event)"
+                                onkeydown="sendFormWithKeyEnter(event)" 
+                                type="text" 
+                                class="form-control" >
                         </div>
                         
                         <div class="col">
