--- a/SE-2019-2/Sistemas_Distribuidos/Tarefas/Outubro-3/learning-app/src/App.css
+++ b/SE-2019-2/Sistemas_Distribuidos/Tarefas/Outubro-3/learning-app/src/App.css
@@ -1,22 +1,12 @@
 .App {
   text-align: center;
+  max-width: auto;
+  margin: auto;
+  background-color: aqua;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.linha{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+  margin-top: 40px;
+  justify-content: space-around;
 }
